// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for ConnectToWallet component click on check all button and clear checked renders correctly 1`] = `
<div>
  <div
    class="select-wallet"
  >
    <header
      class="header"
    >
      <div
        class="connect-with-koi"
      >
        Connect with Koi
      </div>
      <div
        class="title"
      >
        
        <a
          class="company-url"
          href=""
          target="_blank"
        />
      </div>
    </header>
    <div
      class="content"
    >
      <div
        class="card card-content"
      >
        <div
          class="select-account"
        >
          Select accounts
        </div>
        <div
          class="wallet-options"
        >
          <div
            class="wallet-option false"
          >
            <div
              class="checkbox-container check-wallet"
            >
              <div
                class="checkbox-input"
              >
                <input
                  checked=""
                  class="checkbox-hidden"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="checkbox-styled"
                  style="background: rgb(155, 231, 196);"
                >
                  <div
                    class="check-mark-icon"
                    style="visibility: visible;"
                  >
                    <svg />
                  </div>
                </div>
              </div>
            </div>
            <svg
              class="wallet-icon"
            />
            <div
              class="wallet-info"
            >
              <div
                class="wallet-name"
              />
              <div
                class="wallet-address"
              >
                
                ...
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="trust-sites"
        >
          Only connect with sites you trust.
        </div>
        <div
          class="button-line"
        >
          <button
            class="button-shared button-filled button connect"
          >
            Connect
          </button>
          <button
            class="button-shared button-outline button reject"
          >
            Reject
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test for ConnectToWallet component click on connect button renders correctly 1`] = `
<div>
  <div
    class="select-wallet"
  >
    <header
      class="header"
    >
      <div
        class="connect-with-koi"
      >
        Connect with Koi
      </div>
      <div
        class="title"
      >
        
        <a
          class="company-url"
          href=""
          target="_blank"
        />
      </div>
    </header>
    <div
      class="content"
    >
      <div
        class="card card-content"
      >
        <div
          class="allow-permission"
        >
          <div
            class="label"
          >
            Allow this site to:
          </div>
          <div
            class="permission checked"
          >
            <div
              class="checkbox-container check-allow"
            >
              <div
                class="checkbox-input"
              >
                <input
                  checked=""
                  class="checkbox-hidden"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="checkbox-styled"
                  style="background: rgb(155, 231, 196);"
                >
                  <div
                    class="check-mark-icon"
                    style="visibility: visible;"
                  >
                    <svg />
                  </div>
                </div>
              </div>
              <span
                class="checkbox-label"
              >
                View the addresses of your permitted accounts (required)
              </span>
            </div>
          </div>
          <div
            class="trust-sites"
          >
            Only connect with sites you trust.
          </div>
          <div
            class="button-line"
          >
            <button
              class="button-shared button-filled button connect"
            >
              Connect
            </button>
            <button
              class="button-shared button-outline button reject"
            >
              Reject
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test for ConnectToWallet component click on reject button renders correctly 1`] = `
<div>
  <div
    class="select-wallet"
  >
    <header
      class="header"
    >
      <div
        class="connect-with-koi"
      >
        Connect with Koi
      </div>
      <div
        class="title"
      >
        
        <a
          class="company-url"
          href=""
          target="_blank"
        />
      </div>
    </header>
    <div
      class="content"
    >
      <div
        class="card card-content"
      >
        <div
          class="select-account"
        >
          Select accounts
        </div>
        <div
          class="wallet-options"
        >
          <div
            class="wallet-option false"
          >
            <div
              class="checkbox-container check-wallet"
            >
              <div
                class="checkbox-input"
              >
                <input
                  checked=""
                  class="checkbox-hidden"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="checkbox-styled"
                  style="background: rgb(155, 231, 196);"
                >
                  <div
                    class="check-mark-icon"
                    style="visibility: visible;"
                  >
                    <svg />
                  </div>
                </div>
              </div>
            </div>
            <svg
              class="wallet-icon"
            />
            <div
              class="wallet-info"
            >
              <div
                class="wallet-name"
              />
              <div
                class="wallet-address"
              >
                
                ...
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="trust-sites"
        >
          Only connect with sites you trust.
        </div>
        <div
          class="button-line"
        >
          <button
            class="button-shared button-filled button connect"
          >
            Connect
          </button>
          <button
            class="button-shared button-outline button reject"
          >
            Reject
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test for ConnectToWallet component renders without crashing renders correctly 1`] = `
<div>
  <div
    class="select-wallet"
  >
    <header
      class="header"
    >
      <div
        class="connect-with-koi"
      >
        Connect with Koi
      </div>
      <div
        class="title"
      >
        
        <a
          class="company-url"
          href=""
          target="_blank"
        />
      </div>
    </header>
    <div
      class="content"
    >
      <div
        class="card card-content"
      >
        <div
          class="select-account"
        >
          Select accounts
        </div>
        <div
          class="wallet-options"
        >
          <div
            class="wallet-option false"
          >
            <div
              class="checkbox-container check-wallet"
            >
              <div
                class="checkbox-input"
              >
                <input
                  checked=""
                  class="checkbox-hidden"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="checkbox-styled"
                  style="background: rgb(155, 231, 196);"
                >
                  <div
                    class="check-mark-icon"
                    style="visibility: visible;"
                  >
                    <svg />
                  </div>
                </div>
              </div>
            </div>
            <svg
              class="wallet-icon"
            />
            <div
              class="wallet-info"
            >
              <div
                class="wallet-name"
              />
              <div
                class="wallet-address"
              >
                
                ...
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="trust-sites"
        >
          Only connect with sites you trust.
        </div>
        <div
          class="button-line"
        >
          <button
            class="button-shared button-filled button connect"
          >
            Connect
          </button>
          <button
            class="button-shared button-outline button reject"
          >
            Reject
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
